# ugv_navigation_goals

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: config.yaml
documentation/results/: Evolutionary Algorithm 35 slope.txt  Evolutionary Algorithm 45 slope.txt  N-Best 45 slope.txt
include/: header.hpp
include/evolutionary_include/: evolutionary.hpp
include/rulah_navigation_goals/: rulah_navigation_goals.hpp
src/: bezier_curve.cpp  functions.cpp  rulah_navigation_goals.cpp  utilities.cpp  vehicle_dynamics.cpp
src/core/: bezier_curve.cpp  functions.cpp  utilities.cpp  vehicle_dynamics.cpp
src/core/evolutionary_core/: evolutionary_algorithm.cpp  evolutionary_tree.cpp
src/generators/: evolutionary_algorithm_generator.cpp  genetic_algorithm_generator.cpp  hill_climbing_generator.cpp  n_best_generator.cpp
src/tests/: bezier_test.cpp  calculations_test.cpp
